--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>Swatantra yadav personal site</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/swatantra.jpg.png" width="400" height="400" alt="swatantra yadav profile pic"></td>
+      <td><img src="images/swatantra.jpg.png" width="200" height="200" alt="swatantra yadav profile pic"></td>
       <td>
         <h1>Swatantra yadav</h1>
         <p><em>Founder and ceo of <strong><a href="https://mail.google.com/mail/u/0/#inbox">ravoons</a></strong></em></p>
-        <p>I have a REAL ESTATE bussiness and i love money and i love to travel the world</p>
+        <p>I have a REAL ESTATE bussiness and i love to travel the world</p>
       </td>
     </tr>
   </table>
   <hr>
   <h3>TRAVEL LIST</h3>
   <ul>
-    <li>Kedarnath uttarkhand</li>
-    <li>Shimala and manali</li>
+    <li>Kedarnath</li>
+    <li>Shimala</li>
+    <li>Kasol</li>
   </ul>
   <hr>
   <h3>WORK EXPERINCE</h3>
@@ -34,56 +36,35 @@
     </thead>
     <tbody>
       <tr>
-        <td>2015</td>
-        <td>High school grudation</td>
+        <td>2019-2020</td>
+        <td>Worked with coursera</td>
       </tr>
       <tr>
-        <td>2017-2018</td>
-        <td>Intermediate gradation</td>
+        <td>2021</td>
+        <td>Working with udemy </td>
       </tr>
     </tbody>
   </table>
-<hr>
+  <hr>
   <h3>Skiils</h3>
   <table cellspacing="10">
-    <tr>
-      <td>
-        <table>
-          <tr>
-            <td>HTML</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>JAVASCRIPT</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>Handling people</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Public speaking</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Speaking gujarati</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <a href="hobbies.html">my hobbies </a>
-  <a href="contact.html">my details</a>
+    <table>
+      <tr>
+        <td>HTML</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>JAVASCRIPT</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">my hobbies </a>
+    <a href="contact.html">my details</a>
 </body>
 
 </html>
